logos overflow fix

--- a/css/partners.css
+++ b/css/partners.css
@@ -181,7 +181,8 @@
   }
 
   .logo-img{
-    width: 70%;
+    width: 55%;
     height: auto;
   }
+}
 }
